--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                   <div class="row">
                      <div class="col-md-7 center-item">
                         <img src="images/product-1.png" alt="">
-                        git init <h5>iPhone 11 128GB Black</h5>
+                        <h5>iPhone 11 128GB Black</h5>
                      </div>
 
                      <div class="col-md-5 center-item">
