--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
                            <button id="minus-btn" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="product-increase" type="number" min="0" class="form-control text-center"
-                              value="1">
+                           <input id="product-qty" type="number" min="0" class="form-control text-center" value="1">
                            <button id="plus-btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$1219</h5>
