--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                            <input id="product-qty" type="number" min="0" class="form-control text-center" value="1">
                            <button id="plus-btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5>$<span id="price-total">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
