--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
 </head>
 
 <body>
-
    <section>
       <div class="container">
-         <h2>My shopping cart</h2>
+         <h2 class="section-title">My Shopping Cart</h2>
          <div class="cart">
             <div class="col-md-12 col-lg-10 mx-auto">
                <div class="cart-item">
