--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="number" min="0" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="case-minusBtn" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="case-qty" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="case-plusBtn" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
                         </div>
                         <h5>$59</h5>
