--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="minus-btn" class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input id="product-qty" type="number" min="0" class="form-control text-center" value="1">
-                           <button id="plus-btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="phone-minusBtn" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <input id="phone-qty" type="number" min="0" class="form-control text-center" value="1">
+                           <button id="phone-plusBtn" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$<span id="price-total">1219</span></h5>
+                        <h5>$<span id="phone-total">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
